@@ -1,0 +1,36 @@
+from zope.component import adapts
+from zope.component import queryMultiAdapter
+from zope.interface import Interface
+from zope.publisher.interfaces import IRequest
+from zope.publisher.browser import BrowserView
+
+from AccessControl import getSecurityManager
+from AccessControl.Permissions import view as View
+from OFS.interfaces import IApplication
+from ZPublisher.BaseRequest import DefaultPublishTraverse
+
+from Products.CMFPlone.interfaces import IPloneSiteRoot
+
+
+class AppTraverser(DefaultPublishTraverse):
+    adapts(IApplication, IRequest)
+
+    def publishTraverse(self, request, name):
+        if name == 'index_html':
+            view = queryMultiAdapter((self.context, request),
+                        Interface, 'plone-overview')
+            if view is not None:
+                return view
+        return DefaultPublishTraverse.publishTraverse(self, request, name)
+
+
+class Overview(BrowserView):
+
+    def sites(self):
+        result = []
+        secman = getSecurityManager()
+        for obj in self.context.values():
+            if IPloneSiteRoot.providedBy(obj):
+                if secman.checkPermission(View, obj):
+                    result.append(obj)
+        return result
