@@ -1,5 +1,3 @@
-import addzmiquickstart         # Replace the standard Zope start page
-
 import addzmiplonesite          # Add an explicit link to add a new Plone
                                 # site to the ZMI for faster access
 
