@@ -8,6 +8,10 @@ Changelog
 4.0 - Unreleased
 ----------------
 
+- Changed the new default overview page to be a normal browser page and made
+  it aware of multiple Plone sites in the root.
+  [hannosch]
+
 - Overwrote the Zope quick start page, with a more helpful Plone specific
   version as already found in the unified installer.
   [hannosch]
